--- a/src/app/components/addtask/addtask.component.html
+++ b/src/app/components/addtask/addtask.component.html
@@ -10,7 +10,31 @@
 
             </div>
 
-            <div class="col-6 text-end"><button type="button" class="btn"> <i class="bi bi-trash3-fill"></i></button>
+            <div class="col-6 text-end"><button type="button" class="btn" data-toggle="modal"
+                    data-target="#exampleModalCenter"> <i class="bi bi-trash3-fill"></i></button>
+            </div>
+
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+                aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title-1" id="exampleModalCenterTitle">Confirm Deletion</h5>
+
+                        </div>
+                        <div class="modal-body">
+                            Are you sure you want to delete this item?
+                        </div>
+                        <div class="modal-footer justify-content-center">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-primary"
+                                (click)="id!==null && deleteForm(this.id) ; resetForm(myForm)"
+                                data-dismiss="modal">Yes</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="col-6 justify-content-end align-items-center fs-16">
@@ -97,23 +121,26 @@
             </div>
 
 
-            <form class="row g-3 needs-validation" novalidate>
+            <form class="row g-3 needs-validation" novalidate #myForm="ngForm">
                 <div class="col-md-4">
                     <label for="validationCustom01" class="form-label">From</label>
-                    <input type="text" class="form-control" id="validationCustom01" placeholder="12:42" required>
+                    <input type="text" class="form-control" name="from" [(ngModel)]="forms.from" id="validationCustom01"
+                        placeholder="12:42" required />
 
                 </div>
                 <div class="col-md-4">
                     <label for="validationCustom01" class="form-label">To</label>
-                    <input type="text" class="form-control" id="validationCustom01" placeholder="13:04" required>
+                    <input type="text" class="form-control" name="to" [(ngModel)]="forms.to" id="validationCustom01"
+                        placeholder="13:04" required />
 
                 </div>
                 <div class="col-md-4">
                     <label for="validationCustomUsername" class="form-label">Duration</label>
                     <div class="input-group has-validation">
                         <!-- <span class="input-group-text" id="inputGroupPrepend">@</span> -->
-                        <input type="text" class="form-control" id="validationCustomUsername"
-                            aria-describedby="inputGroupPrepend" placeholder="00:22" required>
+                        <input type="text" class="form-control" [(ngModel)]="forms.duration"
+                            id="validationCustomUsername" aria-describedby="inputGroupPrepend" readonly
+                            value="{{durationCompute()}}" placeholder="0 hours 22 minutes" required />
 
                     </div>
                 </div>
@@ -121,7 +148,8 @@
                     <label for="validationCustom03" class="form-label">Client
                         Name</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="clientName" name="clientname" required>
+                        <input type="text" class="form-control" [(ngModel)]="forms.clientname" id="clientName"
+                            name="clientname" required>
                         <div class="input-group-append">
                             <img src="../../../assets/images/X.png" alt="Clear">
                         </div>
@@ -131,7 +159,8 @@
                     <label for="validationCustom03" class="form-label">Case
                         Number</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="caseNumber" name="casenumber" required>
+                        <input type="text" class="form-control" [(ngModel)]="forms.casenumber" id="caseNumber"
+                            name="casenumber" required>
                         <div class="input-group-append">
                             <img src="../../../assets/images/X.png" alt="Clear">
                         </div>
@@ -140,7 +169,7 @@
                 <div class="col-md-12">
                     <label for="validationCustom03" class="form-label">Case</label>
                     <div class="input-group">
-                        <input type="text" class="form-control" id="case" name="case" required>
+                        <input type="text" class="form-control" [(ngModel)]="forms.case" id="case" name="case" required>
                         <div class="input-group-append">
                             <img src="../../../assets/images/X.png" alt="Clear">
                         </div>
@@ -149,18 +178,19 @@
                 <div class="col-md-12">
                     <label for="validationCustom04" class="form-label">Type of
                         work</label>
-                    <select class="form-select" id="typeOfWork" name="typeofwork" required>
+                    <select class="form-select" id="typeOfWork" [(ngModel)]="forms.typeofwork" name="typeofwork"
+                        required>
                         <option selected disabled value>Select
                             the type of work</option>
                         <option>Data Gathering</option>
-                        <option value="">case research</option>
+                        <option>Case research</option>
                     </select>
 
                 </div>
                 <div class="col-mb-12 position-relative">
                     <label for="validationTextarea" class="form-label">Description</label>
-                    <textarea class="form-control" id="description" placeholder="Type in/Record the description"
-                        name="description" required></textarea>
+                    <textarea class="form-control" id="description" [(ngModel)]="forms.description"
+                        placeholder="Type in/Record the description" name="description" required></textarea>
                     <span class="textarea-end-info">Number
                         of
                         symbols 0/250</span>
@@ -168,10 +198,12 @@
                 </div>
 
                 <div class="col-12">
-                    <button class="btn btn-custom w-100" type="submit" (click)="submit()"><img class="mb-1"
-                            src="images/Plus.png" alt style="padding-right: 4px;">Register</button>
+                    <button class="btn btn-custom w-100" type="submit" (click)="onSubmit(); resetForm(myForm)
+                    "><img class="mb-1" src="images/Plus.png" alt style="padding-right: 4px;">Register</button>
                 </div>
             </form>
+            
+
         </div>
     </div>
 </div>
